--- a/03_Sesion-III/2.2_Graficas.ipynb
+++ b/03_Sesion-III/2.2_Graficas.ipynb
@@ -159,22 +159,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "001b3d2e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# of compounds in unfiltered data set: 2291\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "rule5_df = comp_def.apply(df_rule_5, axis=1)\n",
     "print('# of compounds in unfiltered data set:', len(comp_def))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -402,25 +395,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "18a72c86-ea3e-46fa-9466-9f3d7e638cb0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "  molecule_chembl_id                                             smiles  \\\n0       CHEMBL564450  COc1cc(C2=C(c3cn(CCN4CCN(C)CC4)c4ccccc34)C(=O)...   \n1      CHEMBL3957649        Nc1ncc(-c2ccccc2F)nc1C(=O)Nc1cnccc1N1CCNCC1   \n2      CHEMBL3942619  COc1ccc(-c2cnc(N)c(C(=O)Nc3cnccc3N3CCC(N)CC3)n...   \n3      CHEMBL3963605      Nc1ncc(-c2ccccc2)nc1C(=O)Nc1cnccc1N1CCC(N)CC1   \n4      CHEMBL2386090  O=C1NC(=O)C(c2cn3c4c(cccc24)CN(C(=O)c2cnccn2)C...   \n5      CHEMBL4077376  C[C@@H]1CN(c2ccccc2F)CCN1c1nc(-c2ccncn2)cc(=O)n1C   \n6      CHEMBL4063206  COc1cccc(N2CCN(c3nc(-c4ccncn4)cc(=O)n3C)[C@H](...   \n7      CHEMBL3091542  COc1cccc(OC)c1[C@H]1CN(c2nc(-c3ccncn3)cc(=O)n2...   \n8       CHEMBL491647  COCc1cccc2c(C3=C(c4coc5ccccc45)C(=O)NC3=O)cn(C...   \n9      CHEMBL4076186  COc1cc(F)ccc1C1CN(c2nc(-c3ccncn3)cc(=O)n2C)CCN...   \n\n                                               ROMol          MW  HBA  HBD  \\\n0  <img data-content=\"rdkit/molecule\" src=\"data:i...  484.211055    7    1   \n1  <img data-content=\"rdkit/molecule\" src=\"data:i...  393.171336    7    3   \n2  <img data-content=\"rdkit/molecule\" src=\"data:i...  419.206973    8    3   \n3  <img data-content=\"rdkit/molecule\" src=\"data:i...  389.196408    7    3   \n4  <img data-content=\"rdkit/molecule\" src=\"data:i...  489.143704    7    1   \n5  <img data-content=\"rdkit/molecule\" src=\"data:i...  380.176088    7    0   \n6  <img data-content=\"rdkit/molecule\" src=\"data:i...  392.196074    8    0   \n7  <img data-content=\"rdkit/molecule\" src=\"data:i...  409.175004    9    0   \n8  <img data-content=\"rdkit/molecule\" src=\"data:i...  386.126657    5    1   \n9  <img data-content=\"rdkit/molecule\" src=\"data:i...  432.147680    8    1   \n\n     LogP rule_of_five_conform  \n0  3.2107                  yes  \n1  1.9218                  yes  \n2  2.3092                  yes  \n3  2.3006                  yes  \n4  3.4007                  yes  \n5  2.0915                  yes  \n6  1.9610                  yes  \n7  1.8324                  yes  \n8  3.6381                  yes  \n9  1.9577                  yes  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>molecule_chembl_id</th>\n      <th>smiles</th>\n      <th>ROMol</th>\n      <th>MW</th>\n      <th>HBA</th>\n      <th>HBD</th>\n      <th>LogP</th>\n      <th>rule_of_five_conform</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>CHEMBL564450</td>\n      <td>COc1cc(C2=C(c3cn(CCN4CCN(C)CC4)c4ccccc34)C(=O)...</td>\n      <td>&lt;img data-content=\"rdkit/molecule\" src=\"data:i...</td>\n      <td>484.211055</td>\n      <td>7</td>\n      <td>1</td>\n      <td>3.2107</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>CHEMBL3957649</td>\n      <td>Nc1ncc(-c2ccccc2F)nc1C(=O)Nc1cnccc1N1CCNCC1</td>\n      <td>&lt;img data-content=\"rdkit/molecule\" src=\"data:i...</td>\n      <td>393.171336</td>\n      <td>7</td>\n      <td>3</td>\n      <td>1.9218</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>CHEMBL3942619</td>\n      <td>COc1ccc(-c2cnc(N)c(C(=O)Nc3cnccc3N3CCC(N)CC3)n...</td>\n      <td>&lt;img data-content=\"rdkit/molecule\" src=\"data:i...</td>\n      <td>419.206973</td>\n      <td>8</td>\n      <td>3</td>\n      <td>2.3092</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>CHEMBL3963605</td>\n      <td>Nc1ncc(-c2ccccc2)nc1C(=O)Nc1cnccc1N1CCC(N)CC1</td>\n      <td>&lt;img data-content=\"rdkit/molecule\" src=\"data:i...</td>\n      <td>389.196408</td>\n      <td>7</td>\n      <td>3</td>\n      <td>2.3006</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>CHEMBL2386090</td>\n      <td>O=C1NC(=O)C(c2cn3c4c(cccc24)CN(C(=O)c2cnccn2)C...</td>\n      <td>&lt;img data-content=\"rdkit/molecule\" src=\"data:i...</td>\n      <td>489.143704</td>\n      <td>7</td>\n      <td>1</td>\n      <td>3.4007</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>CHEMBL4077376</td>\n      <td>C[C@@H]1CN(c2ccccc2F)CCN1c1nc(-c2ccncn2)cc(=O)n1C</td>\n      <td>&lt;img data-content=\"rdkit/molecule\" src=\"data:i...</td>\n      <td>380.176088</td>\n      <td>7</td>\n      <td>0</td>\n      <td>2.0915</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>CHEMBL4063206</td>\n      <td>COc1cccc(N2CCN(c3nc(-c4ccncn4)cc(=O)n3C)[C@H](...</td>\n      <td>&lt;img data-content=\"rdkit/molecule\" src=\"data:i...</td>\n      <td>392.196074</td>\n      <td>8</td>\n      <td>0</td>\n      <td>1.9610</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>CHEMBL3091542</td>\n      <td>COc1cccc(OC)c1[C@H]1CN(c2nc(-c3ccncn3)cc(=O)n2...</td>\n      <td>&lt;img data-content=\"rdkit/molecule\" src=\"data:i...</td>\n      <td>409.175004</td>\n      <td>9</td>\n      <td>0</td>\n      <td>1.8324</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>CHEMBL491647</td>\n      <td>COCc1cccc2c(C3=C(c4coc5ccccc45)C(=O)NC3=O)cn(C...</td>\n      <td>&lt;img data-content=\"rdkit/molecule\" src=\"data:i...</td>\n      <td>386.126657</td>\n      <td>5</td>\n      <td>1</td>\n      <td>3.6381</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>CHEMBL4076186</td>\n      <td>COc1cc(F)ccc1C1CN(c2nc(-c3ccncn3)cc(=O)n2C)CCN...</td>\n      <td>&lt;img data-content=\"rdkit/molecule\" src=\"data:i...</td>\n      <td>432.147680</td>\n      <td>8</td>\n      <td>1</td>\n      <td>1.9577</td>\n      <td>yes</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
     "comp_out_pic50 = lipinski_comp.drop(['pIC50'], axis=1)\n",
     "comp_out_pic50.head(10)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
