--- a/03_Sesion-III/02_DataVisualization.ipynb
+++ b/03_Sesion-III/02_DataVisualization.ipynb
@@ -368,7 +368,7 @@
     "scaler.fit(df_molecule[['MW', 'HBA', 'HBD', 'LogP']])\n",
     "df_molecule_scaled = scaler.transform(df_molecule[['MW', 'HBA', 'HBD', 'LogP']])\n",
     "df_molecule_scaled = df_molecule.join(pd.DataFrame(df_molecule_scaled, columns=['MW_scaled', 'HBA_scaled', 'HBD_scaled', 'LogP_scaled']))\n",
-    "df_molecule_scaled"
+    "df_molecule_scaled.head()"
    ],
    "metadata": {
     "collapsed": false
@@ -431,7 +431,7 @@
     "    angles += angles[:1]\n",
     "\n",
     "    # Initialise the radar plot\n",
-    "    fig = plt.figure(figsize=(10, 10))\n",
+    "    fig = plt.figure(figsize=(8, 8))\n",
     "    ax = plt.subplot(111, polar=True)\n",
     "\n",
     "    # If you want the first axis to be on top:\n",
