--- a/03_Sesion-III/02_DataVisualization.ipynb
+++ b/03_Sesion-III/02_DataVisualization.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Practica 2: Statistical analysis of the Lipinski's rule of five\n",
+    "# Práctica 2: Statistical analysis of the Lipinski's rule of five\n",
     "\n",
     "## Theory\n",
     "\n",
