--- a/05_Sesion-V/05_Machine_learning.ipynb
+++ b/05_Sesion-V/05_Machine_learning.ipynb
@@ -143,7 +143,7 @@
     "### Fingerprints\n",
     "Para entrenar el algoritmo, debemos convertir los ligandos en una lista de características. En este momento tenemos la estructura molecular (smile) de cada ligando, con esta información podemos importar el *fingerprint* y usar esta nueva representación para entrenar el modelo.\n",
     "\n",
-    "Para encontrar e importar las fingerprints de cada ligando se utiliza la librería `rdkit`, creando una nueva columna en el dataset con el fingerprint. Hay varios tipos de fingerpriont, por ahora bamos a trabajar con [Extended Connectivity Fingerprint ECFP](https://docs.chemaxon.com/display/docs/extended-connectivity-fingerprint-ecfp.md) tasmbién conocida como morgan2_c/ecfp4"
+    "Para encontrar e importar las fingerprints de cada ligando se utiliza la librería `rdkit`, creando una nueva columna en el dataset con el fingerprint. Hay varios tipos de fingerprint, por ahora bamos a trabajar con [Extended Connectivity Fingerprint ECFP](https://docs.chemaxon.com/display/docs/extended-connectivity-fingerprint-ecfp.md) también conocida como morgan2_c/ecfp4"
    ],
    "metadata": {
     "collapsed": false
