--- a/03_Sesion-III/03_DataVisualization_Colab.ipynb
+++ b/03_Sesion-III/03_DataVisualization_Colab.ipynb
@@ -3,7 +3,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Práctica 2: Statistical analysis of the Lipinski's rule of five\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/ramirezlab/Farmacoinformatica-2022/blob/main/03_Sesion-III/03_DataVisualization_Colab.ipynb)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Práctica 3: Statistical analysis of the Lipinski's rule of five\n",
     "\n",
     "## Theory\n",
     "\n",
