--- a/05_Sesion-V/05_Machine_learning_Colab.ipynb
+++ b/05_Sesion-V/05_Machine_learning_Colab.ipynb
@@ -3,7 +3,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Práctica 3: Ligand-based screening: machine learning\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/ramirezlab/Farmacoinformatica-2022/blob/main/05_Sesion-V/05_Machine_learning_Colab.ipynb)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Práctica 5: Ligand-based screening: machine learning\n",
     "\n",
     "## Theory\n",
     "\n",
