--- a/05_Sesion-V/05_Machine_learning_Colab.ipynb
+++ b/05_Sesion-V/05_Machine_learning_Colab.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github.com/ramirezlab/Farmacoinformatica-2022/blob/main/05_Sesion-V/05_Machine_learning_Colab.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ramirezlab/Farmacoinformatica-2022/blob/main/05_Sesion-V/05_Machine_learning_Colab.ipynb)"
    ],
    "metadata": {
     "collapsed": false
