--- a/02_Sesiones-practicas/03_Sesion-III/03_DataVisualization_Colab.ipynb
+++ b/02_Sesiones-practicas/03_Sesion-III/03_DataVisualization_Colab.ipynb
@@ -45,15 +45,6 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "# Carga de datos\n",
@@ -65,21 +56,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!pip install rdkit\n",
+    "!pip install scikit-learn"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Directorio raíz: C:\\Users\\caramirezs\\My Drive\\Python\\Farmacoinformatica-2022\n"
-     ]
-    },
     {
      "data": {
       "text/plain": "  molecule_chembl_id  pIC50  \\\n0      CHEMBL2386094  10.89   \n1      CHEMBL4084855  10.00   \n2      CHEMBL3895998  10.00   \n3       CHEMBL564450   9.85   \n4      CHEMBL4077376   9.70   \n\n                                               smile  \\\n0  O=C1NC(=O)C(c2cn3c4c(cc(F)cc24)CN(C(=O)N2CCOCC...   \n1  COc1ccc(N2CCN(c3nc(-c4ccncn4)cc(=O)n3C)[C@H](C...   \n2     Nc1ncc(-c2ccccc2F)nc1C(=O)Nc1cnccc1N1CCC(N)CC1   \n3  COc1cc(C2=C(c3cn(CCN4CCN(C)CC4)c4ccccc34)C(=O)...   \n4  C[C@@H]1CN(c2ccccc2F)CCN1c1nc(-c2ccncn2)cc(=O)n1C   \n\n                                               ROMol  \n0  <rdkit.Chem.rdchem.Mol object at 0x0000029121E...  \n1  <rdkit.Chem.rdchem.Mol object at 0x0000029121E...  \n2  <rdkit.Chem.rdchem.Mol object at 0x00000291297...  \n3  <rdkit.Chem.rdchem.Mol object at 0x00000291297...  \n4  <rdkit.Chem.rdchem.Mol object at 0x00000291297...  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>molecule_chembl_id</th>\n      <th>pIC50</th>\n      <th>smile</th>\n      <th>ROMol</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>CHEMBL2386094</td>\n      <td>10.89</td>\n      <td>O=C1NC(=O)C(c2cn3c4c(cc(F)cc24)CN(C(=O)N2CCOCC...</td>\n      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x0000029121E...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>CHEMBL4084855</td>\n      <td>10.00</td>\n      <td>COc1ccc(N2CCN(c3nc(-c4ccncn4)cc(=O)n3C)[C@H](C...</td>\n      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x0000029121E...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>CHEMBL3895998</td>\n      <td>10.00</td>\n      <td>Nc1ncc(-c2ccccc2F)nc1C(=O)Nc1cnccc1N1CCC(N)CC1</td>\n      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x00000291297...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>CHEMBL564450</td>\n      <td>9.85</td>\n      <td>COc1cc(C2=C(c3cn(CCN4CCN(C)CC4)c4ccccc34)C(=O)...</td>\n      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x00000291297...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>CHEMBL4077376</td>\n      <td>9.70</td>\n      <td>C[C@@H]1CN(c2ccccc2F)CCN1c1nc(-c2ccncn2)cc(=O)n1C</td>\n      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x00000291297...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 50,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,11 +86,13 @@
     "import os\n",
     "from pathlib import Path\n",
     "\n",
-    "current_directory = os.getcwd()\n",
-    "ROOT_DIR = Path(current_directory).parent\n",
+    "# current_directory = os.getcwd()\n",
+    "# ROOT_DIR = Path(current_directory).parent\n",
     "uniprot_id = 'P49841'\n",
-    "print('Directorio raíz:', ROOT_DIR)\n",
-    "df_output = pd.read_csv(f'{ROOT_DIR}/01_Sesion-I/data/compounds_{uniprot_id}_full.csv')\n",
+    "# print('Directorio raíz:', ROOT_DIR)\n",
+    "# df_output = pd.read_csv(f'{ROOT_DIR}/01_Sesion-I/data/compounds_{uniprot_id}_full.csv')\n",
+    "url = 'https://raw.githubusercontent.com/ramirezlab/Farmacoinformatica-2022/main/02_Sesiones-practicas/01_Sesion-I/data/compounds_P49841_full.csv'\n",
+    "df_output = pd.read_csv(url,parse_dates=[0])\n",
     "df_output.head()"
    ],
    "metadata": {
@@ -218,10 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "df_molecule.to_csv(f'data/{uniprot_id}_compounds_lipinski.csv')"
+    "# El cuaderno de Collab no puede guardar los datos\n",
+    "# df_molecule.to_csv(f'data/{uniprot_id}_compounds_lipinski.csv')"
    ],
    "metadata": {
     "collapsed": false
@@ -313,7 +312,7 @@
     "\n",
     "fig = plt.figure(figsize=(20, 20))\n",
     "ax = sns.pairplot(data=df_molecule, vars=['HBD', 'HBA', 'MW', 'LogP'], hue='rule_of_five_conform')\n",
-    "plt.savefig(f'data/pairplot_Ro5_{uniprot_id}.png', bbox_inches='tight')\n",
+    "# plt.savefig(f'data/pairplot_Ro5_{uniprot_id}.png', bbox_inches='tight')\n",
     "plt.show()\n",
     "plt.close()"
    ],
@@ -471,7 +470,6 @@
     "    # data\n",
     "    data = stats_mean.values\n",
     "    data = np.append(data, data[0])  # close polygon\n",
-    "    print(data)\n",
     "    ax.plot(angles, data, linewidth=3, linestyle='solid', color='purple', label=\"mean\")\n",
     "    # data + std\n",
     "    data_std_up = stats_mean.values + stats_std.values\n",
