--- a/02_Sesiones-practicas/03_Sesion-III/03_DataVisualization_Colab.ipynb
+++ b/02_Sesiones-practicas/03_Sesion-III/03_DataVisualization_Colab.ipynb
@@ -56,11 +56,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting rdkit\n",
+      "  Downloading rdkit-2022.9.1-cp38-cp38-win_amd64.whl (20.2 MB)\n",
+      "     --------------------------------------- 20.2/20.2 MB 32.7 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: numpy in c:\\users\\caramirezs\\anaconda3\\envs\\ml_for_dd\\lib\\site-packages (from rdkit) (1.23.4)\n",
+      "Requirement already satisfied: Pillow in c:\\users\\caramirezs\\anaconda3\\envs\\ml_for_dd\\lib\\site-packages (from rdkit) (9.2.0)\n",
+      "Installing collected packages: rdkit\n",
+      "Successfully installed rdkit-2022.9.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -tkinter-pymol (c:\\users\\caramirezs\\anaconda3\\envs\\ml_for_dd\\dlls)\n",
+      "WARNING: Ignoring invalid distribution -tkinter-pymol (c:\\users\\caramirezs\\anaconda3\\envs\\ml_for_dd\\dlls)\n",
+      "WARNING: Ignoring invalid distribution -tkinter-pymol (c:\\users\\caramirezs\\anaconda3\\envs\\ml_for_dd\\dlls)\n",
+      "WARNING: Ignoring invalid distribution -tkinter-pymol (c:\\users\\caramirezs\\anaconda3\\envs\\ml_for_dd\\dlls)\n",
+      "WARNING: Ignoring invalid distribution -tkinter-pymol (c:\\users\\caramirezs\\anaconda3\\envs\\ml_for_dd\\dlls)\n",
+      "WARNING: Ignoring invalid distribution -tkinter-pymol (c:\\users\\caramirezs\\anaconda3\\envs\\ml_for_dd\\dlls)\n"
+     ]
+    }
+   ],
    "source": [
-    "!pip install rdkit\n",
-    "!pip install scikit-learn"
+    "!pip install rdkit"
    ],
    "metadata": {
     "collapsed": false
