--- a/02_Sesiones-practicas/05_Sesion-V/05_Machine_learning_Colab.ipynb
+++ b/02_Sesiones-practicas/05_Sesion-V/05_Machine_learning_Colab.ipynb
@@ -12,7 +12,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Práctica 5050505050: Ligand-based screening: machine learning\n",
+    "# Práctica 5: Ligand-based screening: machine learning\n",
     "\n",
     "## Theory\n",
     "\n",
