--- a/02_Sesiones-practicas/03_Sesion-III/03_DataVisualization_Colab.ipynb
+++ b/02_Sesiones-practicas/03_Sesion-III/03_DataVisualization_Colab.ipynb
@@ -12,7 +12,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Práctica 3 AAAAAAA: Statistical analysis of the Lipinski's rule of five\n",
+    "# Práctica 3: Statistical analysis of the Lipinski's rule of five\n",
     "\n",
     "## Theory\n",
     "\n",
