--- a/02_Sesiones-practicas/05_Sesion-V/05_Machine_learning_Colab.ipynb
+++ b/02_Sesiones-practicas/05_Sesion-V/05_Machine_learning_Colab.ipynb
@@ -252,8 +252,8 @@
     "### Clasificación de los ligandos\n",
     "Cada ligando debe ser clasificado como **activo** o **inactivo**, para esto usaremos la columna `pIC50` definiendo umbrales de actividiad\n",
     "La proteína *Glycogen synthase kinase-3 beta* se clasifica en el grupo de las * Kinasas*, por tanto, usaremos los siguientes umbrales:\n",
-    "**Inactivo**: *pIC50* < 6.52 uM\n",
-    "**Activo**: *pIC50* >= 7.52 uM"
+    "**Inactivo**: *pIC50* < 6.52",
+    "**Activo**: *pIC50* >= 7.52"
    ],
    "metadata": {
     "collapsed": false
