--- a/02_Sesiones-practicas/05_Sesion-V/05_Machine_learning.ipynb
+++ b/02_Sesiones-practicas/05_Sesion-V/05_Machine_learning.ipynb
@@ -1815,17 +1815,16 @@
     "\n",
     "Teniendo en cuenta lo revisado, realice un código en python con el cual:\n",
     "\n",
-    "Descarge 10 compuestos aleatorios de la base de datos de ChEMBL con un peso molecular entre 500 y 600 g/mol y prediga si esos compuestos son activos o inactivos frente a la proteína *Glycogen synthase kinase-3 beta* utilizando el modelo de machine learning XGBoost empleado en esta práctica.\n",
+    "Pueda predecir si los compuestos son activos o no (valores de 0 y 1) y el valor de la probabilidad de que los siguientes compuestos sean o no activos frente a nuestro target (Glucógeno sintasa quinasa-3 beta) utilizando el modelo de machine learning XGBoost empleado en esta práctica.\n",
+    "\n",
+    "Compuestos a ser empleados: 'CHEMBL362588','CHEMBL5205303','CHEMBL444169','CHEMBL112564','CHEMBL4062791','CHEMBL1081069','CHEMBL5082380','CHEMBL2103840','CHEMBL321421','CHEMBL4091061','CHEMBL5186093','CHEMBL183064','CHEMBL360866','CHEMBL277294','CHEMBL4443876','CHEMBL483465','CHEMBL2048671','CHEMBL3093045','CHEMBL4875903','CHEMBL430694'.\n",
     "\n",
     "\n",
     "Al finalizar deberá preparar un documento en formato PDF en el cual muestre el input y como resultado de ejecución:\n",
     "1. Una tabla con:\n",
     "    * ChEMBL ID.\n",
-    "    * La estructura de los 10 compuestos.\n",
-    "    * pchembL_value.\n",
-    "    * Las reglas de Lipinski (peso molecular, aceptores y donores de enlaces de hidrogéno y logP).\n",
-    "    * Si cumplen o no con las reglas de Lipinski.\n",
-    "    * Valor de la probablidad de ser o no activo.  "
+    "    * Predicción (valores 0 y 1)\n",
+    "    * Valor de la probablidad de ser o no activo."
    ]
   },
   {
