--- a/02_Sesiones-practicas/03_Sesion-III/03_DataVisualization_Colab.ipynb
+++ b/02_Sesiones-practicas/03_Sesion-III/03_DataVisualization_Colab.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ramirezlab/Farmacoinformatica-2022/blob/main/02_Sesiones-practicas/03_Sesion-III/03_DataVisualization_Colab.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ramirezlab/Farmacoinformatica/blob/main/02_Sesiones-practicas/03_Sesion-III/03_DataVisualization_Colab.ipynb)"
    ]
   },
   {
@@ -292,7 +292,7 @@
     "    axes[index].set_xticks([])\n",
     "\n",
     "# Agregar leyenda\n",
-    "legend_elements = [mpatches.Patch(color=colors[index], label=row[\"molecule_chembl_id\"]) for index, row in comp_5_lipinski.iterrows()]\n",
+    "legend_elements = [mpatches.Patch(color=color, label=row[\"molecule_chembl_id\"]) for color, (_,row) in zip(colors, comp_5_lipinski.iterrows())]\n",
     "legend_elements.append(Line2D([0], [0], color=\"black\", ls=\"dashed\", label=\"Threshold\"))\n",
     "fig.legend(handles=legend_elements, bbox_to_anchor=(1.2, 0.8))\n",
     "\n",
@@ -603,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
